syntax = "proto3";

package pb; // A package is just a way to group multiple proto files of the same topic together.
import "google/protobuf/timestamp.proto";
option go_package = "github.com/techschool/simplebank/pb"; // which Go package we want it to generate the Golang codes to.

message User { // define the User messsage. inside the curly brackets, we will have to specify all the fields that a User object will hold.
    string username = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}
// Note that numbers from 1 to 12 take only 1 byte to encode, while bigger numbers require 2 or more bytes.
// So by using small numbers, we're also saving some memory space, and thus make the message smaller in size when begin encoded.

